Fix visibility of menus while collapsing on xs screens

--- a/app/assets/stylesheets/frontend.less
+++ b/app/assets/stylesheets/frontend.less
@@ -39,6 +39,9 @@
     top: @splash-divider-top-posn-xs;
     bottom:@splash-divider-bottom-posn-xs;
   }
+  div.navbar-collapse.collapsing ul.nav.navbar-nav {
+    display: none;
+  }
 }
 
 // Screen tablet (@screen-sm)
