--- a/app/assets/stylesheets/variables.less
+++ b/app/assets/stylesheets/variables.less
@@ -68,12 +68,12 @@
 @navbar-li-padding-factor-md: ceil(@navbar-li-padding-base / 1);
 @navbar-li-padding-factor-lg: ceil(@navbar-li-padding-base / 1);
 
-@navbar-a-padding-hor-factor-xs: ceil(@navbar-a-padding-hor-base / 4);
+@navbar-a-padding-hor-factor-xs: ceil(@navbar-a-padding-hor-base / 3);
 @navbar-a-padding-hor-factor-sm: ceil(@navbar-a-padding-hor-base / 3.7);
 @navbar-a-padding-hor-factor-md: ceil(@navbar-a-padding-hor-base / 1.6);
 @navbar-a-padding-hor-factor-lg: ceil(@navbar-a-padding-hor-base / 1);
 
-@navbar-a-padding-ver-factor-xs: ceil(@navbar-a-padding-ver-base / 4);
+@navbar-a-padding-ver-factor-xs: ceil(@navbar-a-padding-ver-base / 3);
 @navbar-a-padding-ver-factor-sm: ceil(@navbar-a-padding-ver-base / 3.9);
 @navbar-a-padding-ver-factor-md: ceil(@navbar-a-padding-ver-base / 1.5);
 @navbar-a-padding-ver-factor-lg: ceil(@navbar-a-padding-ver-base / 1);
